[workspace]
members = ["crates/compile-regex"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowli/compile-regex"

[workspace.dependencies]
# External dependencies
arbitrary = "1.4.2"
assert_matches = "1.5.0"
compile-fmt = "0.1.0"
rand = "0.9"
regex-syntax = "0.8.8"

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
