[package]
name = "compile-regex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Compile-time regular expression validation and parsing"
categories = ["text-processing", "parser-implementations", "no-std"]
keywords = ["regex", "compile-time", "validation", "parsing"]

[package.metadata.docs.rs]
all-features = true
# Set `docsrs` to enable unstable `doc(cfg(...))` attributes.
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
compile-fmt.workspace = true

[dev-dependencies]
arbitrary.workspace = true
assert_matches.workspace = true
doc-comment.workspace = true
rand.workspace = true
regex-syntax = { workspace = true, features = ["arbitrary"] }
version-sync.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
# Enables support of alloc types, such as `Vec`.
alloc = []
# Enables support of the standard library types, e.g. the `Error` trait implementation.
std = ["alloc"]
